@startuml
skinparam packageStyle Rect
skinparam shadowing false
hide empty members

namespace org.consensusj.jsonrpc {
    interface UntypedRPCClient
    abstract class AbstractRPCClient
    class RPCClient

    UntypedRPCClient <|.. AbstractRPCClient
    AbstractRPCClient <|-- RPCClient

}

namespace org.consensusj.jsonrpc.groovy {
  interface DynamicRPCFallback << Groovy, trait >>
  class DynamicRPCClient << Groovy >>

  org.consensusj.jsonrpc.UntypedRPCClient <|.. DynamicRPCFallback
  org.consensusj.jsonrpc.RPCClient <|-- DynamicRPCClient
  DynamicRPCFallback <|.. DynamicRPCClient
}

namespace org.consensusj.bitcoin.rpc {
    class BitcoinClient
    class BitcoinExtendedClient

    class BitcoinScriptingClient << Groovy >>
    class BitcoinCLIClient << Groovy >>


    org.consensusj.jsonrpc.RPCClient <|-- BitcoinClient
    BitcoinClient <|-- BitcoinExtendedClient
    BitcoinExtendedClient <|-- BitcoinScriptingClient
    org.consensusj.jsonrpc.groovy.DynamicRPCFallback <|.. BitcoinScriptingClient
    BitcoinClient <|-- BitcoinCLIClient
}

namespace org.consensusj.namecoin.rpc {
    class NamecoinClient
    class NamecoinScriptingClient << Groovy >>

    org.consensusj.bitcoin.rpc.BitcoinClient <|-- NamecoinClient
    NamecoinClient <|.. NamecoinScriptingClient
    org.consensusj.jsonrpc.groovy.DynamicRPCFallback <|.. NamecoinScriptingClient
}
@enduml

